--- a/css/product.css
+++ b/css/product.css
@@ -13,6 +13,7 @@ Black : #1A1A1A
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&display=swap');
 
 
+
 *{margin: 0; padding: 0; text-decoration: none; list-style: none; box-sizing: border-box;}
 body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;}
 
@@ -47,7 +48,10 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
         }
         .product_mainTxt p{
             font-size: 22px;
+            color: white;
+            font-family: "Pretendard";
         }
+        
 
 /* product_menus 메뉴공통 */
     .product_menus{
@@ -58,25 +62,28 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
         align-items: center;
         justify-content: center;
     }
-        .product_menus div{
+        .product_menus a{
             /* background-color: antiquewhite; */
-            padding: 0 40px;
-            font-size: 16px;
+            padding: 0 35px;
+            font-size: 18px;
             color: #333333;
+            font-family: "Pretendard";
+            cursor: pointer;
+
         }
             .product_menus_bold{
                 color: #000000;
                 font-weight: 600;
             }
-            .product_menus div:nth-child(2){
-                border-left: 1px solid #1A1A1A;
-                border-right: 1px solid #1A1A1A;
-            }
-            .product_menus div:nth-child(3){
-                border-right: 1px solid #1A1A1A;
+            .product_menusBar{
+                width: 1px;
+                height: 14px;
+                background-color: #999999;
+                display: inline-block;
+                padding-top: 2px;
             }
 
-/* 2 Page */
+/* 메인 2Page */
 .product_page2{
     /* background-color: yellowgreen; */
     width: 90%; 
@@ -111,9 +118,8 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
         }
         .product_p2txt1{
             position: absolute;
-            left: 48.1%; top: 58%;
+            left: 48.5%; top: 58%;
             font-size: 38.5px;
-            font-weight: 100;
             font-family: "Cormorant Garamond", serif;
             letter-spacing: -0.2rem;
             color: 000000;
@@ -126,146 +132,324 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
         }
         .product_p2txt2{
             position: absolute;
-            left: 64%; bottom: 0;
+            left: 66%; bottom: 0;
         }
             .product_p2txt2 h4{
-                font-size: 24px;
+                font-size: 22px;
                 margin-bottom: 30px;
                 font-weight: 500;
-                color: #000000;
+                color: #111111;
                 
             }
             .product_p2txt2 p{
-                font-size: 17px;
+                font-size: 16px;
                 font-weight: 500;
-                color: #333333;
+                color: #555555;
                 font-weight: 400;
                 line-height: 2;
+                font-family: "Pretendard";
             }
 
-/* 3 Page */
+/* 3 Page 그리드 공통*/
+.product_page3_outBox{
+    width: 100%;
+    /* height: 200%; */
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 80px 0 250px 0; 
+    font-family: "Pretendard";
+}
 .product_page3{
-    /* background-color: thistle; */
+    /* background-color: hotpink; */
     width: 90%;
-    height: 220%;
-    margin: 0 auto;
+    height: 90%;
+    height: auto;
+    margin-top: 40px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    padding-top: 130px;
+    /* justify-content: start; */
+    align-items: center;
+    position: relative;
 }
-    .product_p3Box1{
+    .product_page3_link {
+        display: block; /* a태그가 전체 영역 차지하도록 */
+        text-decoration: none;
+        color: inherit; /* 글자색 그대로 유지 */
+    }
+    .product_page3_gridBox{
+        /* background-color: coral; */
         width: 100%;
-        height: 40%;
-        display: flex;
-        justify-content: space-between;
+        height: 90%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* 3칸 고정 */
+        grid-auto-rows: auto; /* 줄 높이는 자동 */
+        gap: 40px;
     }
-        .product_p3Box1 a{
-            width: 32%;
-            height: 100%;
-            /* background-color: tomato; */
-        }
-            .product_p3Box1 a img{
-                width: 100%;
-                height: 85%;
-            }
-    
-    .product_p3Box2{
-        width: 100%;
-        height: 40%;
-        display: flex;
-        justify-content: space-between;
-    }
-        .product_p3Box2 a{
-            width: 32%;
-            height: 100%;
-            /* background-color: tomato; */
-        }
-            .product_p3Box2 a img{
-                width: 100%;
-                height: 85%;
-            }
-    
-    .product_p3Tbox{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-top: 20px;
-        color: #000000;
-    }
-        .product_p3Tbox h2{
-            font-weight: 500;
-            font-size: 23px;
-        }
-        .product_p3Tboxin{
+        .product_page3_gridBox_product{
+            /* border: 2px solid #333 ; */
             display: flex;
-            margin-top: 5px;
-            color: #777777;
+            flex-direction: column;
+            align-items: center;
+            cursor: pointer;
         }
-        .product_bb{
+        .product_page3_imgbox{
+            background-color: #bbb;
+            width: 100%;
+            /* height: 70%; */
+            position: relative;
+            aspect-ratio: 1 / 1.1; /* 비율 고정 (1:1~1:1.2 사이) */
+        }
+            .product_page3_imgbox img{
+                width: 100%;
+                height: 100%;
+                /* position: absolute;
+                object-fit: cover; 
+                display: block; */
+                object-fit: cover;
+                object-position: center; /* 중앙 기준으로 잘림 */
+                display: block;
+            }
+        .product_page3_textBox{
+            width: 100%;
             display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: auto;
+            gap: 10px;
+            margin-top: 35px;
         }
-            .product_bb div{
-                margin-top: 7px;
-                width: 15px;
-                height: 14px;
-                /* background-color: #000000; */
+            .product_page3_textBox h3{
+                font-size: 25px;
+                font-weight: 500;
             }
-            .product_bb div:nth-child(1){
-                border-right: 1px solid #999999;
+            .product_page3_bar{
+                width: 1px;
+                height: 12px;
+                background-color: #999;
+                margin-bottom: 3px;
             }
-    
-    .product_p3Box3{
-        /* background-color: #999999; */
-        width: 100%;
-        height: 10%;
-        display: flex;
-        justify-content: center;
-        margin-top: 30px;
-    }
-        .product_p3Box3 h2{
-            width: 14px;
-            height: 32px;
+
+            p{
+                color: #666;
+                display: flex;
+                align-items: center;
+                gap: 12px;
+                font-size: 17px;
+                font-weight: 400;
+            }
+        .product_page3_pagenum {
+            margin-top: 100px; 
+        }
+        .product_page3_pagenum h4{
+            width: 12px;
+            /* position: absolute;
+            bottom: 6%; */
             font-size: 20px;
-            border-bottom: 2px solid #000000;
+            border-bottom: 2px solid #333;
         }
+        
+        
+
+/* 바디라인, 헤어라인, 페이셜라인 2page 공통 */
+    .product_2page_same{
+        /* background-color: gold; */
+        width: 90%;
+        height: 90%;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        margin: auto;
+        border-bottom: 0.5px solid #999999;
+    }
+        .product_2page_samegridBox{
+            /* background-color: cornflowerblue; */
+            width: 100%;
+            height: 72%;
+            position: absolute;
+            bottom: 10%;
+            display: grid;
+            grid-template-columns: 50% auto;
+            gap: 0px;
+            
+        }
+            .product_2page_samegrid{
+                width: 100%;
+                height: 100%;
+                /* border: 2px solid black; */
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+                .product_2page_samegrid img{
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    object-fit: contain;
+                }
+            .product_2page_gridT{
+                width: 100%;
+                display: flex;
+                font-family: "Pretendard";
+            }
+                .product_2page_gridT h3{
+                    width: 100%;
+                    text-align: center;
+                    font-size: 22px;
+                    font-weight: 400;
+                }
+                .product_2page_gridT div{
+                    width: 50%;
+                    height: 35px;
+                    margin: 30px 0;
+                }
+                    .product_2page_gridT div:nth-child(1){
+                        border-right: 1px solid #999;
+                    }
+                .product_2page_gridT p{
+                    /* background-color: violet; */
+                    text-align: center;
+                    color: #666;
+                    font-size: 17px;
+                    font-weight: 400;
+                    line-height: 1.8;
+                    margin: 0 auto;
+                }
 
 
-
-/* Products_body_lotion */
-.product_body_lotion{
-    background-color: aqua;
+/* Products_body_lotion, shampoo 상세페이지 */
+.product_detail{
+    /* background-color: aqua; */
     width: 90%;
     height: 150%;
     margin: 0 auto;
     display: flex;
     align-items: center ;
 }
-    .product_body_lotion_gridBox{
-        background-color: violet;
-        width: 100%;
-        display: grid;
-        grid-template-columns:50% auto;;
-        gap: 150px;
-    }
-        .body_lotion_grid{
-            border: 2px solid #333;
-        }
-    
-    .body_lotion_imgbox{
-        background-color: turquoise;
-        width: 100%;
-        height: 100%;
-        position: relative;
-        overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-        .body_lotion_imgbox img {
+
+.product_detail_gridBox{
+    /* background-color: violet; */
+    width: 100%;
+    display: grid;
+    grid-template-columns:50% auto;;
+    gap: 165px;
+}
+
+
+.product_detail_imgbox{
+    /* background-color: turquoise; */
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.product_detail_imgbox img {
     width: 100%;
     height: 100%;
     object-fit: contain; /* 비율 유지하면서 꽉 채우기 */
     display: block;
 }
+
+.product_detail_gridT1{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 15px;
+}
+.product_detail_gridT1 p{
+    font-size: 18px;
+    color: #333;
+    font-weight: bold;
+    font-family: "Cormorant Garamond";
+}
+.product_detail_gridT1 div{
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    border: 1px solid #111;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.product_detail_gridT2{
+    margin-bottom: 18px;
+    color: #666;
+}
+    .product_detail_gridT2 p{
+        font-size: 17px;
+        font-weight: 400;
+        font-family: "Pretendard";
+    }
+    .gridT2_bar{
+        display: inline-block;
+        width: 1px;
+        height: 12px;
+        margin: 0 2px;
+        background-color: #888;
+    }
+
+.product_detail_gridT3{
+    display: flex;
+    align-items: end;
+    gap: 10px;
+    margin-bottom: 25px;
+}
+.product_detail_gridT3 h1{
+    font-size: 37px;
+    font-weight: 500;
+    font-family: "Pretendard";
+}
+.product_detail_gridT3 p{
+    font-size: 17px;
+    font-weight: 500;
+    padding-bottom: 4px;
+    color: #666;
+    font-family: "Pretendard";
+}
+
+.product_detail_gridT4{
+    margin-bottom: 40px;
+}
+.product_detail_gridT4 h1{
+    font-size: 28px;
+    font-weight: 500;
+    font-family: "Pretendard";
+    
+}
+
+.product_detail_gridT5 div{
+    width: 100%;
+    /* height: 85px; */
+    padding: 32px 0;
+    display: flex;
+    align-items: center;
+    font-size: 17px;
+    font-weight: 500;
+    border-bottom: 1px solid #bbb;
+    font-family: "Pretendard";
+}
+.product_detail_gridT5 div:nth-child(1){
+    border-bottom: 2px solid #111;
+    font-size: 18px;
+}
+.product_detail_gridT5 a{
+    margin-top: 40px;
+    width: 100%;
+    height: 70px;
+    background-color: #333;
+    display: flex;              /* div처럼 flex 정렬 가능 */
+    justify-content: center;    /* 텍스트 가운데 정렬 */
+    align-items: center;
+    color: white;
+    font-size: 20px;
+    font-family: "Pretendard";
+}
+
