글씨 떠오르게 하기

--- a/components/header.html
+++ b/components/header.html
@@ -17,7 +17,7 @@
       <nav>
         <ul class="inner" id="gnb">
           <li data-panel="p1"><a href="#brand" data-page="brand">BRAND</a></li>
-          <li data-panel="p2"><a href="#products" data-page="products">PRODUCTS</a></li>
+          <li data-panel="p2"><a href="#product" data-page="products">PRODUCTS</a></li>
           <li data-panel="p3"><a href="#rndTechnology" data-page="rndTechnology">R&D</a></li>
           <li data-panel="p4"><a href="#press" data-page="press">PRESS</a></li>
           <li data-panel="p5"><a href="#contact" data-page="contact">CONTACT</a></li>
