contactUs first page

--- a/components/header.html
+++ b/components/header.html
@@ -56,7 +56,7 @@
         <div class="panel" id="p5">
           <ul class="sub_nav">
             <li><a href="#contact" data-page="contact">CONTACT</a></li>
-            <li><a href="#contact_address" data-page="contact_address">DIRECTIONS</a></li>
+            <li><a href="#contact_address" data-page="contact_address">CONTACT US</a></li>
           </ul>
         </div>
       </div>
