--- a/css/contact.css
+++ b/css/contact.css
@@ -198,3 +198,85 @@ body {
     height: 200px;
     /* background-color: blue; */
 }
+
+ /* contactUs */
+ #contactUs {
+    width: 100vw;
+    /* height: 100vh; */
+    margin-bottom: 200px;
+}
+.contactUs_text {
+    text-align: center;
+    margin-top: 150px;
+}
+.contactUs_text h1 {
+    font-size: 6rem;
+    font-family: "Cormorant";
+    margin-bottom: -10px;
+}
+.contactUs_text p {
+    font-size: 1rem;
+    font-family: "serif";
+}
+.contactUs_map {
+    max-width: 1000px;
+    height: 500px;
+    background-color: aqua;
+    margin: 0 auto;
+    margin-top: 100px;
+    border: 1px solid #ccc;
+}
+.contactUs_grid {
+    width: 1000px;
+    margin: 0 auto;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 33% 34% 33%;
+    grid-template-rows: 200px 200px;
+}
+    .contactUs_grid .grid {
+        border: 1px solid #ccc;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    background-color: #fff;
+
+    }
+    .contactUs_grid .grid1 {
+        grid-column: 1/3;
+    }
+    .contactUs_grid .grid2 {
+        grid-column: 3/4;
+    }
+    .contactUs_grid .grid3 {
+        grid-column: 1/2;
+    }
+    .contactUs_grid .grid4 {
+        grid-column: 2/3;
+    }
+    .contactUs_grid .grid5 {
+        grid-column: 3/4;
+    }
+    .contactUs_grid .grid h5 {
+        font-family: "Cormorant", serif;
+        font-size: 1.2rem;
+        margin-bottom: 5px;
+    }
+    .contactUs_grid .grid p {
+        font-size: 0.81rem;
+        color: #666;
+    }
+.weather_info {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100px;
+}
+.weather_info > img {
+    width: 100px;
+    height: 100%;
+    object-fit: cover;
+}
