--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,2 @@
-* {margin: 0; padding: 0; list-style: none; text-decoration: none; box-sizing: border-box;}
+* {margin: 0; padding: 0; list-style: none; text-decoration: none; box-sizing: border-box; font-size: 16px;}
 body {width: 100vw; overflow-x: hidden; background-color: #f5f3ee;}
