--- a/components/header.html
+++ b/components/header.html
@@ -12,7 +12,7 @@
   <header id="header">
     <div id="navWrap">
       <div class="logo">
-        <a href="#home"><img src="../img/etc/logo/logo1.png" alt="VYOR 로고"></a>
+        <a href="#home"><img src="img/etc/logo/logo1.png" alt="VYOR 로고"></a>
       </div>
       <nav>
         <ul class="inner" id="gnb">
