--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,41 @@
 * {margin: 0; padding: 0; list-style: none; text-decoration: none; box-sizing: border-box; font-size: 16px;}
 body {width: 100vw; overflow-x: hidden; background-color: #f5f3ee;}
+
+/* 수연코드 */
+/* popup */
+    .popupBox{
+        width: 500px;
+        height: 650px;
+        /* background-color: tomato; */
+        position: relative;
+    }
+        .popup_imgBox{
+            width: 500px;
+            height: 650px;
+            position: relative;
+        }
+            .popup_imgBox img{
+                width: 100%;
+                height: 100%;
+            }
+        .popup_tBox{
+            background-color: #EEEAE2;
+            opacity: 0.9;
+            width: 100%;
+            display: flex;
+            font-family: "Pretendard";
+            font-weight: 400;
+            position: relative;
+            bottom: 0;
+            z-index: 10;
+        }
+            .popup_tBox button{
+                width: 100%;
+                height: 40px;
+                border: none;
+                position: absolute;
+                bottom: 0;
+                z-index: 15;
+            }
+
+/* 수연코드 */
