--- a/css/product.css
+++ b/css/product.css
@@ -15,7 +15,11 @@ Black : #1A1A1A
 
 
 *{margin: 0; padding: 0; text-decoration: none; list-style: none; box-sizing: border-box;}
-body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;}
+body{width: 100vw; overflow-x: hidden; background-color: #F5F3EE;}
+
+html {
+    scroll-behavior: smooth;
+}
 
 /* product_main 공통 */
 .product_main{
@@ -93,42 +97,41 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
 
 /* 메인 2Page */
 .product_page2{
-    padding: 10% 0 6% 0;
+    padding: 10% 0 6.5% 0;
     /* background-color: yellowgreen; */
     width: 90%; 
-    height: 140%;
+    height: 1300px;
     margin: 0 auto;
     display: flex;
     align-items: center;
     border-bottom: 0.5px solid #999999;
+    position: relative;
 }
     .product_p2Inbox{
         /* background-color: tomato; */
         position: relative;
         width: 100%;
-        height: 80%;
+        height: 100%;
         display: flex;
     }
         .product_p2Img1{
             width: 58%;
             height: 100%;
-            flex: 0 0 58%; /* flex-grow:0, flex-shrink:0, flex-basis:58%라서 축소/확장 안 되고 58% 고정 */
-            /* background-color: #b89c53; */
+
         }
             .product_p2Img1 img{
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
+                object-fit: fill;
                 display: block;
             }
         .product_p2Img2{
             position: absolute;
-            left: 48.1%; top: 215px;
+            left: 47.1%; top: 170px;
         }
         .product_p2txt1{
             position: absolute;
-            left: 48.5%; top: 58%;
-            font-size: 38.5px;
+            left: 47.5%; top: 53%;
             font-family: "Cormorant Garamond", serif;
             letter-spacing: -0.2rem;
             color: 000000;
@@ -138,10 +141,16 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
             );
             -webkit-background-clip: text;
             color: transparent; /* 글씨를 투명하게 */
+            z-index: 10;
+            margin: 50px 0;
+        }
+        .product_p2txt1 > h2{
+            font-size: 63px;
         }
         .product_p2txt2{
             position: absolute;
             left: 66%; bottom: 0;
+            /* border: 1px solid black; */
         }
             .product_p2txt2 h4{
                 font-size: 22px;
@@ -151,7 +160,7 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
                 
             }
             .product_p2txt2 p{
-                font-size: 16px;
+                font-size: 1.05rem;
                 font-weight: 500;
                 color: #555555;
                 font-weight: 400;
@@ -338,6 +347,8 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
     margin: 0 auto;
     display: flex;
     align-items: center ;
+    margin-top: 180px;
+    margin-bottom: 180px;
 }
 
 .product_detail_gridBox{
