--- a/css/contact.css
+++ b/css/contact.css
@@ -247,6 +247,46 @@ body {
     margin-top: 100px;
     border: 1px solid #ccc;
 }
+    .wrap_map {
+      width: 300px;
+      height: 120px;
+    }
+    .info_map {
+      width: 100%;
+      height: 100%;
+      background-color: #f5f3ee;
+      border-radius: 10px;
+      border-bottom: 0.5px solid #aaa;
+      overflow: hidden;
+    }
+    .company_map {
+      height: 35%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 0.5px solid #aaa;
+      padding: 3px 10px;
+      background-color: #333;
+      overflow: hidden;
+    }
+    .company_map .img_map { margin-top: 3px;}
+    .company_map .title_map {
+      font-weight: bold;
+      color: #fff;
+    }
+    .company_map .close_map {
+      cursor: pointer;
+      color: #fff;
+    }
+    .desc_map {
+      font-size: 0.8rem;
+      text-align: right;
+      padding-right: 20px;
+    }
+    .desc_map > div:first-child { font-size: 0.7rem;padding-top: 3px;}
+    /* .desc_map > div:last-child { font-size: 0.7rem;} */
+    .home_map > a { font-size: 0.7rem; text-decoration: none; color: #333}
+
 .contactUs_grid {
     width: 1000px;
     margin: 0 auto;
