--- a/components/footer.html
+++ b/components/footer.html
@@ -11,8 +11,8 @@
             <div class="footer_inner">
                 <div class="foot_logo">
                     <img
-                        src="https://vyor.kr/images/common/foot_logo.png"
-                        alt="로고"
+                        src="img/logo/foot_logo.png" 
+                        alt="로고" loading="lazy"
                     />
                 </div>
                 <div class="textSide">
