main page slide edit

--- a/components/footer.html
+++ b/components/footer.html
@@ -11,7 +11,7 @@
             <div class="footer_inner">
                 <div class="foot_logo">
                     <img
-                        src="img/logo/foot_logo.png" 
+                        src="img/etc/logo/foot_logo.png" 
                         alt="로고" loading="lazy"
                     />
                 </div>
