--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {width: 100vw; overflow-x: hidden; background-color: #f5f3ee;}
 
 html {
   font-size: 16px;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 /* ================= HERO SECTION ================= */
 #home_hero {
@@ -16,7 +16,7 @@ html {
   z-index: 1;
 }
 #home_hero video {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -398,10 +398,14 @@ html {
 .home_product-gallery {
   display: flex;
   gap: 20px;
-  /* new */
+  opacity: 0;
+  transform: translateY(50px);
   transition: transform 1s ease;
   will-change: transform;
-  /* overflow: hidden; */
+}
+.home_product-gallery.active {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .home_slide-item {
@@ -621,6 +625,7 @@ html {
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  z-index: 99;
 }
 
 .home_contact-inner {
@@ -725,6 +730,7 @@ html {
                 position: absolute;
                 bottom: 0;
                 z-index: 15;
+                cursor: pointer;
             }
 /* 수연코드 */
 /*  Footer 항상 표시 */
