rnd 반응형 수정

--- a/css/rnd.css
+++ b/css/rnd.css
@@ -44,15 +44,6 @@
    opacity: 1;
    transform: translateY(0);
 }
-/* video 화면의 글자가 너무 커서  */
-@media (max-width: 768px) {
-   .overlay > h1 {
-      font-size: 6rem;
-   }
-   .overlay > p {
-      font-size: 1rem;
-   }
-}
 
 #rnd_sec2 {
    background-attachment: fixed;
@@ -164,6 +155,7 @@
    height: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
+   grid-auto-rows: 100%;
 }
 /* Research */
 #rnd_research_sec3 {
@@ -530,4 +522,36 @@
    /* margin-top: 50px; */
    opacity: 1;
    transform: translateY(0);
+}
+
+/* rnd 반응형  */
+@media screen and (max-width: 768px) {
+   .overlay > h1 {
+      font-size: 6rem;
+   }
+   .overlay > p {
+      font-size: 1rem;
+   }
+   .overlay {
+      top: 70%;
+   }
+   .rnd_sec3, .rnd_sec4 {
+      height: auto !important;
+      overflow: visible !important;
+   }
+   .rnd_sec .grid_container {
+      grid-template-columns: 1fr;
+      grid-auto-rows: auto;
+   }
+   .grid_container .grid1,
+   .grid_container .grid2 {
+      width: 100%;
+   }
+   .grid_container .grid3,
+   .grid_container .grid4 {
+      width: 100%;
+   }
+   .grid_container .grid2 .text_desc {
+      padding: 0 20px !important;
+   }
 }
