--- a/css/header.css
+++ b/css/header.css
@@ -113,3 +113,13 @@ header.hide_header #navWrap .logo img {
    opacity: 0;
    pointer-events: none;
 } 
+
+@media  screen and (max-width: 768px) {
+   #navWrap {
+      width: 100%;
+      padding: 0 20px !important;
+   }
+   nav {
+      display: none;
+   }
+}
