--- a/css/sitemap.css
+++ b/css/sitemap.css
@@ -64,7 +64,7 @@
     padding-top: 100px;
   }
   .menuLarge {
-    font-size: 3rem;
+    font-size: 4rem !important;
     margin-left: 50px;
   }
 }
