--- a/css/product.css
+++ b/css/product.css
@@ -482,3 +482,42 @@ html {
     font-family: "Pretendard";
 }
 
+/* 3 Page 그리드 공통*/
+/* 반응형 - 모바일 (약 600px 이하) */
+@media (max-width: 600px) {
+    .product_page3_outBox {
+        padding: 50px 0 150px 0;
+    }
+
+    .product_page3_gridBox {
+        grid-template-columns: repeat(2, 1fr); /* 모바일도 2칸 */
+        gap: 20px; /* 칸 사이 간격 축소 */
+    }
+
+    .product_page3_gridBox_product {
+        width: 100%;
+    }
+
+    .product_page3_imgbox {
+        aspect-ratio: 1 / 1.1; /* 비율 유지 */
+    }
+
+    .product_page3_textBox {
+        margin-top: 15px;
+        gap: 5px;
+    }
+
+    .product_page3_textBox h3 {
+        font-size: 16px;
+        text-align: center;
+        line-height: 1.3;
+    }
+
+    .product_page3_textBox p {
+        font-size: 13px;
+    }
+
+    .product_page3_pagenum {
+        margin-top: 60px;
+    }
+}
